# handler/save.go
@@ -4,16 +4,10 @@ import (
 	"fmt"
 	"net/http"
 
-	"github.com/champon1020/argus/repository"
 	"github.com/gin-gonic/gin"
 )
 
-type RequestBody struct {
-	Article  repository.Article `json:"article"`
-	Contents string             `json:"contents"`
-}
-
-func RegisterArticleHandler(c *gin.Context) {
+func SaveArticleHandler(c *gin.Context) {
 	var (
 		body RequestBody
 		err  error
@@ -24,15 +18,9 @@ func RegisterArticleHandler(c *gin.Context) {
 		return
 	}
 
-	fp := ResolveContentFilePath(body.Article.ContentUrl, "articles")
+	fp := ResolveContentFilePath(body.Article.ContentUrl, "drafts")
 	body.Article.ContentUrl = ConvertPathToFileName(fp)
 	if err = OutputFile(fp, body.Contents); err != nil {
-		fmt.Fprint(c.Writer, http.StatusInternalServerError)
-		return
-	}
-
-	mysql := repository.GlobalMysql
-	if err = repository.RegisterArticleCmd(mysql, body.Article); err != nil {
 		fmt.Fprint(c.Writer, http.StatusInternalServerError)
 		DeleteFile(fp)
 		return
